--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -43,3 +43,14 @@
     border-top: 1px solid $baby-blue;
   }
 }
+
+.addtip {
+  background-color: $baby-blue;
+  color: $oxford-blue;
+  text-align: center;
+  margin-top: 16px;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  padding: 2px;
+  font-weight: bold;
+}
