fixed the items issue

--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -5,7 +5,8 @@
   border: 3px dashed $oxford-blue;
   padding: 20px 10px;
   border-radius: 10px;
-  width: 300px;
+  font-size: 1.5rem;
+  width: 400px;
   margin-bottom: 32px;
   cursor: pointer;
   transition: transform 0.2s;
