changed the orientation a bit

--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -15,10 +15,13 @@
 }
 
 .clipboard {
-  @extend .centered;
   @extend .padded;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: $baby-blue;
   color: $oxford-blue;
+  overflow-y: auto;
   flex: 1;
 }
 
