chanegd background color of input

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -7,6 +7,7 @@
   font-family: inherit;
   font-size: 1.3rem;
   border: 2px solid $baby-blue;
+  background-color: $baby-blue;
 
   &:focus {
     outline: none;
