--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -1,4 +1,30 @@
 @import "../../styles/variables";
+@import "../../styles/globals.scss";
+
+.itemcontainer {
+  display: flex;
+  align-items: center;
+  transition: transform 0.2s;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.deleteitem {
+  @extend .centered;
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: 1px solid $oxford-blue;
+  margin-left: 16px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $baby-blue-tint;
+    border-width: 2px;
+  }
+}
 
 .clipboard_item {
   color: $oxford-blue;
@@ -9,12 +35,10 @@
   width: 450px;
   margin-bottom: 32px;
   cursor: pointer;
-  transition: transform 0.2s;
-}
 
-.clipboard_item:hover {
-  transform: scale(1.1);
-  background-color: $baby-blue-tint;
+  &:hover {
+    background-color: $baby-blue-tint;
+  }
 }
 
 .itemtext {
