--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -33,7 +33,7 @@
   border-radius: 10px;
   font-size: 1.5rem;
   width: 450px;
-  margin-bottom: 32px;
+  margin: 0 0 32px 0;
   cursor: pointer;
 
   &:hover {
