--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -7,8 +7,9 @@
 }
 
 .newitem {
-  @extend .centered;
   @extend .padded;
+  display: flex;
+  flex-direction: column;
   background-color: $oxford-blue;
   color: $baby-blue;
   flex: 0.5;
@@ -26,6 +27,10 @@
   position: relative;
 }
 
+.inputarea {
+  flex: 1;
+}
+
 .newitempanel {
   padding: 16px;
   text-align: center;
@@ -39,13 +44,14 @@
   .addtext {
     margin-bottom: 16px;
   }
+}
 
-  .dragdroptext {
-    margin-top: 16px;
-    padding: 16px;
-    border: 2px dashed $baby-blue;
-    border-radius: 10px;
-  }
+.dragdroptext {
+  margin-top: 16px;
+  padding: 16px;
+  border: 2px dashed $baby-blue;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .addtip {
