--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -34,13 +34,11 @@
   font-size: 1.5rem;
   width: 450px;
   cursor: pointer;
+  background-color: $baby-blue;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 
   &:hover {
     background-color: $baby-blue-tint;
   }
-}
-
-.itemtext {
-  font-family: inherit;
-  line-height: 1rem;
 }
