--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -7,11 +7,11 @@
   font-size: 1.3rem;
   background-color: $oxford-blue;
   color: $baby-blue;
+  border: none;
   resize: none;
 
   &:focus {
     outline: none;
-    border: 1px solid $baby-blue;
   }
 
   &::placeholder {
