added empty state

--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -65,6 +65,14 @@
   font-weight: bold;
 }
 
+.noitems {
+  text-align: center;
+}
+
+.noitems1 {
+  font-size: 2rem;
+}
+
 @media screen and (max-width: 940px) {
   .container {
     flex-direction: column;
