--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -9,6 +9,7 @@
 .newitem {
   @extend .padded;
   display: flex;
+  position: relative;
   flex-direction: column;
   background-color: $oxford-blue;
   color: $baby-blue;
@@ -82,6 +83,10 @@
   width: 40px;
   border-radius: 20px;
   font-size: 0.9rem;
+
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
 
   color: $oxford-blue;
   background-color: $baby-blue;
