--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -47,3 +47,9 @@
     background-color: $baby-blue-tint;
   }
 }
+
+@media screen and (max-width: 550px) {
+  .clipboard_item {
+    width: 250px;
+  }
+}
