--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -91,6 +91,10 @@
   background-color: $baby-blue;
 }
 
+.captionarea {
+  border: 1px solid $baby-blue;
+}
+
 @media screen and (max-width: 940px) {
   .container {
     flex-direction: column;
