--- a/src/components/ClipboardItem/ClipboardItem.module.scss
+++ b/src/components/ClipboardItem/ClipboardItem.module.scss
@@ -58,7 +58,7 @@
   margin: 5px 16px;
   font-weight: bold;
   user-select: none;
-  max-width: 100%;
+  max-width: 450px;
 }
 
 @media screen and (max-width: 550px) {
