Decreased width of caption field for mobile

--- a/src/pages/Clipboard/Clipboard.module.scss
+++ b/src/pages/Clipboard/Clipboard.module.scss
@@ -95,6 +95,10 @@
   border: 1px solid $baby-blue;
 }
 
+.mobilecaptionarea {
+  width: 60%;
+}
+
 @media screen and (max-width: 940px) {
   .container {
     flex-direction: column;
